@@ -1,0 +1,12 @@
+<?xml version="1.0" encoding="UTF-8" ?>
+<xs:schema xmlns:xs="http://www.w3.org/2001/XMLSchema">
+
+  <xs:element name="listOfStrings">
+    <xs:complexType>
+      <xs:sequence>
+        <xs:element name="strings" type="xs:string" minOccurs="1" maxOccurs="256"/>
+      </xs:sequence>      
+    </xs:complexType>
+  </xs:element>
+
+</xs:schema>
